# fedmud-icml25

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataloader/: dataloader.py  datapartition.py
decompose/: dmu.py  models.py
model/: cnn.py
run/: 11-fedavg.sh  12-feddmu.sh  21-fedavg.sh  22-feddmu.sh  31-fedavg.sh  32-feddmu.sh  41-fedavg.sh  42-feddmu.sh
train/: client.py  server.py  trainer.py
utils/: logger.py  tool.py
