[project]
name = "feddmu"
version = "0.1.0"
description = "Code for FedMUD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr>=1.18.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
